--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "HyperPC",
-  "name": "Create React App Sample",
+  "name": "HyperPC",
   "icons": [
     {
       "src": "favicon.ico",
